Run in "prod" mode in local & deploy to PWS

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -23,7 +23,7 @@ spring:
         url: jdbc:postgresql://localhost:5432/bookstore
         name:
         username: bookstore
-        password:
+        password: pass
     jpa:
         database-platform: com.lmt.bookstore.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
